--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: Run Auth Test
-        run: go test ./...
+      - name: Run Tests
+        run: go test ./... -cover
