--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Run Tests
         run: go test ./... -cover
 
-  style:
+  Style:
     name: Format Go code
     runs-on: ubuntu-latest
 
