--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,11 @@ jobs:
         run: go test ./... -cover
 
   Style:
-    name: Format Go code
+    name: Style
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out code
+      - name: Check out code and shit
         uses: actions/checkout@v4
 
       - name: Set up Go
@@ -34,5 +34,5 @@ jobs:
         with:
           go-version: "1.23.0"
         
-      - name: Correct style formatting
+      - name: Correct style formatting and actually work plz
         run: test -z $(go fmt ./...)
