--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out code and shit
+      - name: Check out code and shit -
         uses: actions/checkout@v4
 
       - name: Set up Go
