--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,19 @@ jobs:
         
       - name: Correct style formatting
         run: test -z $(go fmt ./...)
+  
+  tyle:
+    name: Style - style
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out code and shit
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.23.0"
+        
+      - name: Correct style formatting
+        run: test -z $(go fmt ./...)
