--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: go test ./... -cover
 
   Style:
-    name: Style - style
+    name: Style
     runs-on: ubuntu-latest
 
     steps:
