--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,23 +28,22 @@ jobs:
     name: GCloud Authenticate and Info
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      id-token: write
+      contents: 'read'
+      id-token: 'write'
 
     steps:
-      - id: auth
-        uses: google-github-actions/auth@v2
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
         with:
-          workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
-          service_account: 'my-service-account@my-project.iam.gserviceaccount.com'
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
         with:
           version: '>= 363.0.0'
 
-      - name: Use gcloud CLI
-        run: gcloud info
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
 
       - name: Build docker in gcloud
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-469522/notely-ar-repo/notely:v1 .
