update gcloud cd.yml for gcloud to check code

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,9 +21,6 @@ jobs:
       - name: Build Script
         run: scripts/buildprod.sh
 
-      - name: Setup-Gcloud
-        run: scripts/buildprod.sh
-
   gcloud_auth:
     name: GCloud Authenticate and Info
     runs-on: ubuntu-latest
@@ -32,6 +29,10 @@ jobs:
       id-token: 'write'
 
     steps:
+
+      - name: Check out code
+        uses: actions/checkout@v4  
+
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
