--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,6 +33,14 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4  
 
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.23.0"
+
+      - name: Build Script
+        run: scripts/buildprod.sh   # Build 'notely' binary HERE
+
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
