--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,8 +5,8 @@ on:
     branches: [main]
 
 jobs:
-  Deploy:
-    name: Deploy
+  ADeploy:
+    name: ADeploy
     runs-on: ubuntu-latest
 
     steps:
@@ -18,11 +18,11 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: Build Script
+      - name: gcloud builds submit
         run: scripts/buildprod.sh
 
-  gcloud_auth:
-    name: GCloud Authenticate and Info
+  Deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     permissions:
       contents: 'read'
@@ -54,5 +54,5 @@ jobs:
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
 
-      - name: Build docker in gcloud
+      - name: gcloud builds submit
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-469522/notely-ar-repo/notely:v1 .
