--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -56,3 +56,6 @@ jobs:
 
       - name: gcloud builds submit
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-469522/notely-ar-repo/notely:v1 .
+
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image REGION-docker.pkg.dev/PROJECT_ID/REPO_NAME/IMAGE:TAG --region us-central1 --allow-unauthenticated --project notely-615479325132 --max-instances=4
