--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,38 +17,47 @@ jobs:
 
     steps:
 
+        #Read over code
       - name: Check out code
         uses: actions/checkout@v4  
 
+        #Setup go to run code
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.23.0"
 
+        # Build Notely App binary
       - name: Build Script
         run: scripts/buildprod.sh
-
+        
+        # Setup google GCP authorization
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
+        # Check versoin being used for google cloud
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v2'
         with:
           version: '>= 363.0.0'
-
+        
       - name: 'Use gcloud CLI'
-        run: 'gcloud info'
+        run: 'gcloud info' 
 
+        # Build remote docker on GCP
       - name: gcloud builds submit
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-469522/notely-ar-repo/notely:v1 .
 
+        # Install goose for database updates
       - name: Install goose
         run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
+        # Create migration scripts for database
       - name: Migrate Up Script
         run: scripts/migrateup.sh
-
+        
+        # Deploy cloud run notely service
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-469522/notely-ar-repo/notely:v1 --region us-central1 --allow-unauthenticated --project notely-469522 --max-instances=4
